tests/sources/good/square7.graph
7 8
2 4
1 3
2 4 6
1 3 5
4 6
3 5 7
6
