tests/sources/bad/test6_3D_error.graph
8 14
5 3 2
1 4 8 5
4 6 1
7 6 2 3
8 1 6 2
5 7 3 4
8 6 4
7 5 2
